调用与当前类Test7在同一包中所有类里那些本类自己定义的公开,无参且名字中含有S的方法